--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -81,31 +81,45 @@
   align-self: flex-end;
 }
 .closeBtn i {
-  color: black;
   transition: all 0.3s ease;
+  font-size: 1.8rem;
+  color: white;
+  cursor: pointer;
 }
 
 .closeBtn i:hover {
-  color: white;
+  color: rgb(192, 24, 24);
 }
 
 .editBtn {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-top: 10px;
   cursor: pointer;
   font-weight: 500;
-  padding: 0.8rem;
+  padding: 0.6rem;
+  max-width: 100%;
   border-radius: 12px;
   font-size: 0.8rem;
+  max-height: 35px;
   border: none;
   color: #fff;
   background: #1a893f;
-  opacity: 0.7;
+  opacity: 1;
   width: 100%;
-  transition: all 0.3s ease;
+  transition: all 0.1s ease;
+}
+
+.editBtn:disabled {
+  background: #e7e8e9;
+  color: #9fa3a9;
+  cursor: not-allowed;
 }
 
 .editBtn:hover {
-  opacity: 1;
+  opacity: 0.7;
 }
 
 .cancelBtn {
@@ -113,17 +127,16 @@
   width: 100%;
   cursor: pointer;
   font-weight: 500;
-  padding: 0.8rem;
+  padding: 0.6rem;
   border-radius: 12px;
   font-size: 0.8rem;
   border: none;
-  color: #2c3e50;
-  background: #fcfcfc;
-  opacity: 0.7;
+  color: #ffffff;
+  background: #b32727;
+  opacity: 1;
   transition: all 0.25s ease;
 }
 
 .cancelBtn:hover {
-  opacity: 1;
-  background: whitesmoke;
+  opacity: 0.7;
 }
